fix: use charset constants