@@ -11,6 +11,8 @@ import com.example.partymaker.data.api.NetworkUtils;
 import com.example.partymaker.data.model.User;
 import com.example.partymaker.data.repository.UserRepository;
 import com.example.partymaker.utils.auth.AuthenticationManager;
+
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -629,7 +631,7 @@ public class ProfileViewModel extends ViewModel {
       String stringValue = (String) value;
       try {
         // Decode URL-encoded strings (like converting + back to spaces)
-        return java.net.URLDecoder.decode(stringValue, "UTF-8");
+        return java.net.URLDecoder.decode(stringValue, StandardCharsets.UTF_8);
       } catch (Exception e) {
         Log.w(TAG, "Failed to decode value: " + stringValue, e);
         return value; // Return original if decode fails
